kubernetes/app-red/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-red-service
  namespace: app-red
spec:
  type: ClusterIP
  selector:
    app: app-red
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
